Implement comprehensive department and doctor CRUD functionality
- Add complete hospital management with department and doctor assignment
- Create reusable form widgets in app_widget/hospital_form/ package
- Implement DepartmentFormWidget and DoctorFormWidget with validation
- Add DepartmentAndDoctorScreen with tabbed interface for management
- Support full CRUD operations: Create, Read, Update, Delete for both departments and doctors
- Implement cascade deletion: removing departments also removes assigned doctors
- Add proper error handling for orphaned doctor references
- Include form validation, loading states, and user feedback
- Add comprehensive localization support for all new UI elements
- Implement RESTful routing with proper navigation patterns
- Add visual indicators for invalid department assignments
- Prevent crashes when editing doctors with removed departments

Technical improvements:
- Fixed dialog closing issues after successful save operations
- Added proper separation of concerns between forms and screen logic
- Implemented referential integrity protection for department-doctor relationships
- Enhanced user experience with warnings about cascade deletions
- Added comprehensive error handling and validation throughout

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -28,5 +28,39 @@
   "noHospitals": "No hospitals added yet",
   "addTreatment": "Add Treatment",
   "addHospital": "Add Hospital",
+  "editHospital": "Edit Hospital",
+  "deleteHospital": "Delete Hospital",
+  "deleteHospitalConfirmation": "Are you sure you want to delete this hospital?",
+  "hospitalName": "Hospital Name",
+  "address": "Address",
+  "hospitalType": "Hospital Type",
+  "hospitalTypeHint": "e.g., General Hospital, Specialty Hospital",
+  "hospitalLevel": "Hospital Level",
+  "hospitalLevelHint": "e.g., Class A Grade 3, Class B Grade 2",
+  "save": "Save",
+  "delete": "Delete",
+  "edit": "Edit",
+  "fieldRequired": "This field is required",
+  "hospitalAddedSuccess": "Hospital added successfully",
+  "hospitalUpdatedSuccess": "Hospital updated successfully",
+  "hospitalDeletedSuccess": "Hospital deleted successfully",
+  "departmentAndDoctor": "Department & Doctor",
+  "departmentAndDoctorTitle": "Department & Doctor Management",
+  "departments": "Departments",
+  "doctors": "Doctors",
+  "addDepartment": "Add Department",
+  "addDoctor": "Add Doctor",
+  "departmentName": "Department Name",
+  "doctorName": "Doctor Name",
+  "departmentCategory": "Department Category",
+  "doctorTitle": "Doctor Title",
+  "manageDepartments": "Manage Departments",
+  "manageDoctors": "Manage Doctors",
+  "noDepartments": "No departments assigned yet",
+  "noDoctors": "No doctors assigned yet",
+  "departmentAssignedSuccess": "Department assigned successfully",
+  "departmentRemovedSuccess": "Department removed successfully",
+  "doctorAssignedSuccess": "Doctor assigned successfully",
+  "doctorRemovedSuccess": "Doctor removed successfully",
   "@@description": "App description"
 }
