Implement comprehensive visit management system with BLoC pattern
- Add department and doctor BLoCs for complete CRUD operations
- Create visit form BLoC with advanced validation and state management
- Implement cascading selection (hospital → department → doctor)
- Add new visit screens (add, edit, detail) with navigation
- Update database schema and localization for visit features
- Add visit form widget with dynamic dropdown support

--- a/app_lib/locale/lib/arb/app_en.arb
+++ b/app_lib/locale/lib/arb/app_en.arb
@@ -98,6 +98,9 @@
   "visitAddedSuccess": "Visit added successfully",
   "visitUpdatedSuccess": "Visit updated successfully",
   "visitDeletedSuccess": "Visit deleted successfully",
+  "editVisit": "Edit Visit",
+  "deleteVisit": "Delete Visit",
+  "deleteVisitConfirmation": "Are you sure you want to delete this visit?",
   "retry": "Retry",
   "@@description": "App description"
 }
